addressing most review points

--- a/flexible_needle.bib
+++ b/flexible_needle.bib
@@ -52,7 +52,7 @@
 
 @article
 {yaniv2010needle,
-  title={Needle-based interventions with the image-guided surgery toolkit (IGSTK): From phantoms to clinical trials},
+  title={Needle-based interventions with the image-guided surgery toolkit ({IGSTK}): From phantoms to clinical trials},
   author={Yaniv, Ziv and Cheng, Patrick and Wilson, Emmanuel and Popa, Teo and Lindisch, David and Campos-Nanez, Enrique and Abeledo, Hernan and Watson, Vance and Cleary, Kevin and Banovac, Filip},
   journal={IEEE Transactions on Biomedical Engineering},
   volume={57},
@@ -82,7 +82,7 @@
 }
 
 @article{sheafor2000comparison,
-  title={Comparison of sonographic and {CT} guidance techniques: does CT fluoroscopy decrease procedure time?},
+  title={Comparison of sonographic and {CT} guidance techniques: does {CT} fluoroscopy decrease procedure time?},
   author={Sheafor, Douglas H and Paulson, Erik K and Kliewer, Mark A and DeLong, David M and Nelson, Rendon C},
   journal={American journal of roentgenology},
   volume={174},
@@ -134,7 +134,7 @@
 }
 
 @incollection{gupta2014ct,
-  title={CT-guided interventions: current practice and future directions},
+  title={{CT}-guided interventions: current practice and future directions},
   author={Gupta, Rajiv and Walsh, Conor and Wang, Irene S and Kachelrie{\ss}, Marc and Kuntz, Jan and Bartling, S{\"o}nke},
   booktitle={Intraoperative Imaging and Image-Guided Therapy},
   pages={173--191},
@@ -229,7 +229,7 @@
 }
 
 @article{manduca2009projection,
-  title={Projection space denoising with bilateral filtering and CT noise modeling for dose reduction in CT},
+  title={Projection space denoising with bilateral filtering and {CT} noise modeling for dose reduction in {CT}},
   author={Manduca, Armando and Yu, Lifeng and Trzasko, Joshua D and Khaylova, Natalia and Kofler, James M and McCollough, Cynthia M and Fletcher, Joel G},
   journal={Medical physics},
   volume={36},
@@ -262,9 +262,51 @@
 }
 
 @article{khan2007approximation,
-  title={Approximation of data using cubic Bezier curve least square fitting},
+  title={A new method for video data compression by quadratic {B\'ezier} curve fitting},
   author={Khan, M},
-  journal={Nur Online verf{\"u}gbar: http://130.235},
-  volume={212},
-  year={2007}
+  journal={Signal, Image and Video Processing},
+  volume={6},
+  number={1},
+  pages={19–-24},
+  year={2012}
+}
+
+@article{stoeckelhuber2005radiation,
+  title={Radiation dose to the radiologist’s hand during continuous CT fluoroscopy-guided interventions},
+  author={Stoeckelhuber, Beate M and Leibecke, Thorsten and Schulz, Edda and Melchert, Uwe H and Bergmann-Koester, Claudia U and Helmberger, Thomas and Gellissen, Joerg},
+  journal={Cardiovascular and interventional radiology},
+  volume={28},
+  number={5},
+  pages={589--594},
+  year={2005},
+  publisher={Springer}
+}
+
+@misc{dynact,
+  author = {{Siemens Healthcare}},
+  title = {{syngo DynaCT}},
+  howpublished = "\url{https://www.healthcare.siemens.com/angio/options-and-upgrades/clinical-software-applications/syngo-dynact/technical-details}",
+  year = {2018}, 
+  note = "[Online; accessed 24-Oct-2018]"
+}
+
+@article{ccimen2016reconstruction,
+  title={Reconstruction of coronary arteries from X-ray angiography: A review},
+  author={{\c{C}}imen, Serkan and Gooya, Ali and Grass, Michael and Frangi, Alejandro F},
+  journal={Medical image analysis},
+  volume={32},
+  pages={46--68},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{cong2015quantitative,
+  title={Quantitative analysis of deformable model-based 3-D reconstruction of coronary artery from multiple angiograms},
+  author={Cong, Weijian and Yang, Jian and Ai, Danni and Chen, Yang and Liu, Yue and Wang, Yongtian},
+  journal={IEEE Transactions on Biomedical Engineering},
+  volume={62},
+  number={8},
+  pages={2079--2090},
+  year={2015},
+  publisher={IEEE}
 }
