--- a/template.tex
+++ b/template.tex
@@ -54,6 +54,10 @@ grestore
 \usepackage{url}
 \usepackage{spreadtab}
 \usepackage{algorithm,algorithmic}
+\usepackage{amsmath}
+
+\DeclareMathOperator*{\argmin}{argmin} % thin space, limits underneath in displays
+\DeclareMathOperator*{\myint}{int} %
 %
 % \usepackage{mathptmx}      % use Times fonts if available on your TeX system
 %
@@ -108,7 +112,7 @@ grestore
 \maketitle
 
 \begin{abstract}
-We present a new method for flexible needle and patient tracking in interventional CT procedures based on fractional CT scanning, extending a previous method for rigid needles.
+We present a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
 Our method accurately localizes the trajectory of a flexible needle to which a spherical marker is attached at a known distance from the tip with respect to a baseline scan of patient in the CT scanner coordinate frame. 
 This is achieved with lower dose compared to a full scan using sparse view angle sampling and without reconstructing the CT image of the repeat scan.
 Our method takes advantage of rigid registration to the baseline scan computed from the sparse projection data to calculate projection difference images, in which the needle and attached spherical marker are prominent features, allowing the needle trajectory to be traced in 3D space from its 2D projections.
@@ -156,14 +160,16 @@ Earlier work by Glozman et al. \cite{glozman2007image} describes robotic flexibl
 Most works in needle localization from medical images use ultrasound as the imaging modality. A robotically positioned 2D transducer perpendicular to the needle tip is presented in Vrooijink et al. \cite{vrooijink2013real}, where needle-induced image artifacts are taken advantage of in order to localize the needle tip in the imaged plane, while the transducer is continuously re-positioned to maintain its orientation relative to the needle tip. An approach combining both ultrasound and CT fluoroscopy is presented in \cite{marinetto2017integration}, where a free-hand ultrasound probe and C-arm are registered using an external optical tracker to produce a fused image in which the needle can be tracked.
 
 The following works describe specific methods to localize the needle trajectory in reconstructed CT images:
+In previous work by the authors \cite{medan2017reduced}, localization of a straight rigid needle is addressed. The needle path is found by an intersection of planes in 3D space calculated from 2D projection images.
 Hou et al. \cite{huo2015shape} reconstruct the bevel-tip flexible needle trajectory from full CT slices by localizing points at which the needle intersects slice planes, and fitting a fourth-order polynomial to the collection of 3D points.
 Yaniv et al. \cite{yaniv2010needle} describe a system in which embedded electromagnetic fiducials are used for needle tracking under CT guidance, with operator input required to identify the needle tip in a full CT scan taken in-situ. These methods rely on acquisition of full repeat scan and reconstruction of the image for each localization of the needle. This approach carries the associated cost in radiation dose for the patient. In the following section, we present a novel method for flexible needle localization in projection space using fractional scanning, without volume image reconstruction of the repeat scan, which promises to reduce the radiation dose associated with each needle localization.
+\cite{medan2017reduced}
 
 In a different clinical application, Cong et al.  \cite{cong2015quantitative} show the 3D structure of coronary arteries can be reconstructed from few views of X-ray angiography using forward projection of an evolving parametric 3D model into 2D views, updating the model based on the projection images.
 
 \section{Method}
 
-We describe next an extension to flexible needles of our previous method \cite{medan2017reduced} for rigid needle and patient tracking in interventional CT procedures based on fractional CT scanning. Similarly to our previous method, we begin by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between a baseline scan without a needle, and a repeat scan with a needle introduced. The repeat scan is performed by sampling sparsely in the view angle domain (fractional scanning) and without reconstructing the CT image, while the baseline scan is assumed to be a full scan (sampled densely in the view angle domain). We use projection difference images (shown in Fig. \ref{proj_diff_fig}), which are calculated by subtracting registered reprojected baseline scan images from the sparse set of repeat projection images. These highlight the differences between scans, which in our case is assumed to be the needle. The needle trajectory is then traced in 3D space using only the projection difference images. The stages of our method are outlined below:
+We describe next a method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning. We begin by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between a baseline scan without a needle, and a repeat scan with a needle introduced. The repeat scan is performed by sampling sparsely in the view angle domain (fractional scanning) and without reconstructing the CT image, while the baseline scan is assumed to be a full scan (sampled densely in the view angle domain). We use projection difference images (shown in Fig. \ref{proj_diff_fig}), which are calculated by subtracting registered reprojected baseline scan images from the sparse set of repeat projection images. These highlight the differences between scans, which in our case is assumed to be the needle. The needle trajectory is then traced in 3D space using only the projection difference images. The stages of our method are outlined below:
 \begin{enumerate}
 \item \textit{Fractional scanning}. A fractional repeat scan is obtained with the needle in place. The full baseline scan and fractional repeat scan are registered using our sinogram space rigid registration method \cite{medan2017sparse}.
 \item \textit{Projection difference}. Using the obtained rigid registration, the projection difference images are calculated by applying the rigid transformation to the baseline scan volume, forward projection, and subtracting from corresponding repeat scan projection images. The images are then post-processed by calculating the gradient intensity image and normalizing by the local mean gradient intensity value, to obtain an image in which the features of the projection difference have intensities on the same order of magnitude.
@@ -178,10 +184,29 @@ Section \ref{markerloc} summarizes the step for localizing the spherical marker 
 Section \ref{inctracing} provides a detailed breakdown of the incremental 3D curve tracing algorithm.
 
 \subsection{Marker localization} \label{markerloc}
-The 3D center of the spherical marker is localized in three stages, using a method previously outlined in our method for rigid needles \cite{medan2017reduced}. 
-First, the 2D centers of the projected spherical marker are roughly localized in each of the $K$ projection difference images by correlating the difference projection image with a circular pattern. 
-Then, the 2D projected marker centers in each projection difference image are refined by optimizing a cost function which takes into account the image gradients of the marker's surface.
-Finally, the 3D position of the marker center $s$ is calculated by solving an inverse problem using the known projection geometry of the CT and the localized marker centers.
+The 3D center of the spherical marker is localized in three stages:
+\begin{enumerate}
+    \item 
+    {
+    The 2D centers of the projected spherical marker are roughly localized in each of the $K$ projection difference images by correlating the difference projection image with a circular pattern. 
+    }
+    \item 
+    {
+    The 2D projected marker center in each projection difference image is refined by optimizing a cost function which takes into account the image gradients of the marker's surface:
+    \begin{equation}
+        c_j = \argmin_{c \in \rm I\!R^2}{
+        \iint_{\lvert \, \lvert\lvert x-c \rvert\rvert - R \rvert < \epsilon}
+        {\nabla h_j(x) \cdot \hat{r}_c} \, \mathrm{d}x}
+    \end{equation}
+    where $h_j(x)$ is the projection difference image for view $j$, $R$ is the known radius of the marker, and $\epsilon$ is a small distance parameter set to the physical size of one detector pixel, so that the gradient of the projection difference image is best aligned with the radial direction $\frac{(x-c)}{ \\\lvert\lvert x-c \rvert\rvert}$ inside a spherical shell of radius R and thickness $2\epsilon$.
+    }
+    \item
+    {
+    the 3D position of the marker center is calculated by solving an inverse problem using the known projection geometry of the CT and the localized marker centers, given as transformation matrices $P_j$. The set of projection equations $\{P_j s = c_j\}_{j=1}^K$ is solved to find the 3D marker center $s$.
+    }
+\end{enumerate}
+
+
 
 \subsection{Incremental trajectory tracing} \label{inctracing}
 
@@ -298,8 +323,8 @@ The study itself is limited to several scans of an abdomen phantom, with the fra
 Future work would address the issue of patient motion during the repeat scan to obtain a better localization of the needle by modelling the movement and finding its parameters directly from projection space. Additionally, deformable registration in projection space as another stage after rigid registration would extend the usability of our method to situations in which tissue deformations, such as those caused by breathing, cannot be neglected.
 
 \section{Conclusions}
-We have described a flexible needle extension of our method for needle and patient tracking in interventional CT procedures, based on fractional CT scanning without image reconstruction.
-Our method accurately traces a flexible needle's 3D trajectory by following its shape in projection space for a sparse set of views. Starting from a spherical marker attached to it at a known distance from the tip, it traces the trajectory to the tip without reconstructing the CT image.
+We have described a method for flexible needle and patient tracking in interventional CT procedures, based on fractional CT scanning and without image reconstruction of the repeat scan.
+Our method can accurately trace a flexible needle's 3D trajectory by following its shape in projection space for a sparse set of views. Starting from a spherical marker attached to it at a known distance from the tip, it traces the trajectory to the tip without reconstructing the CT image.
 
 The main advantages of our method are:
 1) accurate flexible needle trajectory and needle tip localization without image reconstruction;
@@ -309,7 +334,7 @@ The main advantages of our method are:
 5) only a simple marker attached to the needle is required; 
 6) artifact-free monitoring of a flexible needle's trajectory on top of a baseline scan.
 
-An accuracy level comparable to 3D image space methods is shown in our experimental results.
+In a limited phantom study performed in cooperation with a leading CT manufacturer, an accuracy level comparable to 3D image space methods is shown in our experimental results.
 The dose reduction enabled by our method allows either more frequent tip localizations during needle insertion for a similar total dose, or a reduced total dose for the same frequency of tip localization - a reduction of $\times$10-25, based on the fraction of views used from the repeat scan.
 
 
